--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Šišmiš Mišo i izgubljeni</title>
+  <title></title>
 
   <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -20,8 +20,8 @@
 
   <main class="content">
 
-    <h1 id="title">Šišmiš Mišo i izgubljeni</h1>
-    <h2 id="location">📍 Trg prijateljstva</h2>
+    <h1 id="title"></h1>
+    <h2 id="location"></h2>
 
     <img src="Šišmiš_Mišo.png" alt="Slika šišmiša Miša" class="hero-image">
 
@@ -56,3 +56,4 @@
 
 </body>
 </html>
+
