--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
 
     <!-- RIDDLE -->
     <div class="riddle">
-      <h3 id="riddleTitle">🔍 Zagonetka</h3>
+      <h3 id="riddleTitle"></h3>
       <p id="riddleText"></p>
-     <!-- <p class="answer" id="riddleAnswer"></p> -->
     </div>
 
     <div class="hint-container">
@@ -56,4 +55,5 @@
 
 </body>
 </html>
+
 
