--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1 id="title"></h1>
     <h2 id="location"></h2>
 
-    <img src="Šišmiš_Mišo.png" alt="Slika šišmiša Miša" class="hero-image">
+<!--    <img src="Šišmiš_Mišo.png" alt="Slika šišmiša Miša" class="hero-image"> -->
 
     <div class="story" id="story"></div>
 
@@ -55,5 +55,6 @@
 
 </body>
 </html>
+
 
 
