--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
 
     <h1 id="title"></h1>
     <h2 id="location"></h2>
-
-<!--    <img src="Šišmiš_Mišo.png" alt="Slika šišmiša Miša" class="hero-image"> -->
-
+    
     <div class="story" id="story"></div>
+    
+    <div class="info">
+      <h3 id="infoTitle"></h3>
+      <p id="info">
+    </div>
 
     <!-- RIDDLE -->
     <div class="riddle">
@@ -55,6 +58,7 @@
 
 </body>
 </html>
+
 
 
 
