--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
     <div class="info">
       <h3 id="infoTitle"></h3>
-      <p id="info">
+      <div class="info" id="infoText"></div>
     </div>
 
     <!-- RIDDLE -->
@@ -58,6 +58,7 @@
 
 </body>
 </html>
+
 
 
 
