--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
     
     <div class="story" id="story"></div>
     
-    <div class="info">
+    <div class="info" id="infoBlock">
       <h3 id="infoTitle"></h3>
-      <div class="info" id="infoText"></div>
+      <div id="infoText"></div>
     </div>
+
 
     <!-- RIDDLE -->
     <div class="riddle">
@@ -58,6 +59,7 @@
 
 </body>
 </html>
+
 
 
 
