--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <span onclick="setLang('de')">DE</span>
   </div>
   
-  <div class="progressline" id="stepNav" style="display:none;">
+  <div class="progressline" id="stepNav">
     <button class="progressline__arrow" id="prevBtn" type="button">←</button>
     <span class="progressline__counter" id="stepCounter">1/4</span>
     <button class="progressline__arrow" id="nextBtn" type="button">→</button>
@@ -70,6 +70,7 @@
 
 </body>
 </html>
+
 
 
 
